<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDateRIL"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCategoryRIL"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvAssemblerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvResponsibleNameRIL"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCommentsRIL"
            android:textSize="17sp" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>


