<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.view.cardstages.CardManufacturingActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tvTittleMIA"
                android:textColor="@color/md_theme_primary"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tvSerialNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvSerialNumberMIA"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvCategoryMIA"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvCardModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvCardModelMIA"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvCreationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvCreationDateMIA"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvUpdateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvUpdateDateMIA"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/tvUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/tvUpdateMIA"
                android:textSize="22sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvNewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tvNewStatusMIA"
                android:textSize="17sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategory"
                style="@style/TextInputLayout.NoBottomLine.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

                <AutoCompleteTextView
                    android:id="@+id/atvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/atvCategoryMIA"
                    android:inputType="none"
                    android:textSize="15sp"
                    app:simpleItems="@array/categories_without_Service" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilResponsibleName"
                style="@style/TextInputLayout.NoBottomLine."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieResponsibleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tieResponsibleNameMIA"
                    android:inputType="text"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilComments"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top|start"
                android:visibility="gone"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/tieCommentsNCA"
                    android:inputType="textMultiLine"
                    android:maxLength="500" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnUpdate"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btnUpdateMIA"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btnCancelMIA"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/tvHistoryMIA"
                android:textColor="@color/md_theme_primary"
                android:textSize="22sp" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/piHistories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:indeterminate="true" />

            <Button
                android:id="@+id/btnDisplayFieldsAddRecord"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btnDisplayFieldsAddRecordMIA" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>