<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.view.cardstages.CardCreationActivity">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/tvTittleNCA"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTittle">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvDateNCA"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvCardModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvCardModelNCA"
                android:textSize="17sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilModel"
                style="@style/TextInputLayout.NoBottomLine.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

                <AutoCompleteTextView
                    android:id="@+id/atvModels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tilSelectModelNCA"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvAmountNCA"
                android:textSize="17sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAmount"
                style="@style/TextInputLayout.NoBottomLine."
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tieAmountNCA"
                    android:inputType="number"
                    android:maxLength="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvSerialNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvSerialNumberNCA"
                android:textSize="17sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvDetailsNCA"
                android:textSize="17sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAssemblerName"
                style="@style/TextInputLayout.NoBottomLine."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieAssemblerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tieNameNCA"
                    android:inputType="text"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilComments"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top|start"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/tieCommentsNCA"
                    android:inputType="textMultiLine"
                    android:maxLength="500" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCreateCard"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btnCreateCardNCA" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCancelNCA" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>